--- a/day00/ex02/doft.css
+++ b/day00/ex02/doft.css
@@ -14,15 +14,33 @@ body {
     box-shadow: 7px 7px 5px;
     border-radius: 10px;
     margin-top: 15px;
+    padding: 5px;
 }
 .horizontal {
-    height: 100px;
+    height: 120px;
     width: 1000px;
-    justify-content: left;
+    position: relative;
 }
-.img_horizontal {
+.img_doft {
     height: 100px;
-    display: flex;
+}
+.img_close {
+    height: 25px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+}
+.img_reload {
+    height: 25px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+.img_loupe {
+    height: 150px;
+    position: absolute;
+    right: 50px;
+    bottom: -20px;
 }
 .container {
     display: flex;
