--- a/day00/ex02/doft.css
+++ b/day00/ex02/doft.css
@@ -49,24 +49,21 @@ body {
     height: 200px;
 }
 .vertical {
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: space-around;*/
     margin-left: 30px;
     margin-right: 30px;
-    display: flex;
-    /*justify-content: space-between;*/
+    height: 200px;
+    width: 60px;
 }
-.left {
-    /*width: 10%;*/
-    /*height: 10%;*/
-}
-.right {
-    width: 10%;
-}
-.center {
-    /*display: flex;*/
-    justify-content: center;
-    width: 80%;
-}
+/*.center {*/
+    /*justify-content: center;*/
+    /*width: 60%;*/
+/*}*/
 .side_image {
-    display: flex;
-    width: 50%;
+    width: 50px;
+    height: 50px;
+    /*position: real;*/
+    /*top: 0px;*/
 }
