--- a/day00/ex02/doft.css
+++ b/day00/ex02/doft.css
@@ -3,11 +3,21 @@ body {
     background-color: #505050;
 }
 .global {
+    width: 75%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+
+    /*justify-content: space-between;*/
+    position: relative;
 }
 .wrap {
-    width: 1000px;
+    justify-content: space-between;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 650px;
+    /*flex-wrap: wrap;*/
 }
 .grey_box {
     background: #909090;
@@ -17,8 +27,8 @@ body {
     padding: 5px;
 }
 .horizontal {
-    height: 120px;
-    width: 1000px;
+    height: 20%;
+    width: 100%;
     position: relative;
 }
 .img_doft {
@@ -37,33 +47,67 @@ body {
     top: 5px;
 }
 .img_loupe {
-    height: 150px;
+    height: 100%;
     position: absolute;
     right: 50px;
-    bottom: -20px;
+    bottom: -15px;
 }
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    width: 1000px;
-    height: 200px;
+    width: 100%;
+    /*height: 650px;*/
+    position: relative;
 }
 .vertical {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*justify-content: space-around;*/
-    margin-left: 30px;
-    margin-right: 30px;
-    height: 200px;
-    width: 60px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 20%;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 400px;
+
 }
-/*.center {*/
-    /*justify-content: center;*/
-    /*width: 60%;*/
-/*}*/
+.center {
+    align-content: stretch;
+    /*display: block;*/
+    justify-content: center;
+    width: 80%;
+    height: 120%;
+}
+
 .side_image {
-    width: 50px;
-    height: 50px;
+    width: auto;
+    /*width: 30%;*/
+    height: 20%;
     /*position: real;*/
     /*top: 0px;*/
+}
+
+.down {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.central_img {
+    width: 100%;
+
+}
+
+.chat {
+    background-color: #88FF89;
+    position: absolute;
+    bottom: -60px;
+    left: 0px;
+    /*right: 50px;*/
+    width: 35%;
+    height: 20%;
+    box-shadow: 7px 7px 5px;
+    border-radius: 10px;
+    margin-top: 15px;
+    padding: 5px;
 }
